<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/calendarNav"
        android:icon="@drawable/ic_baseline_calendar_month_24"
        android:title="@string/calendarTitle" />
    <item
        android:id="@+id/notesNav"
        android:icon="@drawable/ic_baseline_note_24"
        android:title="@string/notesTitle" />
    <item
        android:id="@+id/todoNav"
        android:icon="@drawable/ic_baseline_checklist_24"
        android:title="@string/ToDoTitle" />
    <item
        android:id="@+id/shoppinglistNav"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/shoppingTitle" />
    <item
        android:id="@+id/focusNav"
        android:icon="@drawable/ic_baseline_headphones_24"
        android:title="@string/focusTitle" />
</menu>