<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentShopList">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/btnClearShopping"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/moreroundedbutton"
        android:drawableLeft="@drawable/ic_baseline_cancel_24"
        android:drawablePadding="5dp"
        android:fontFamily="casual"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/clear"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSaveShop"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/moreroundedbutton"
        android:drawableLeft="@drawable/ic_baseline_save_24"
        android:drawablePadding="5dp"
        android:fontFamily="casual"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/save"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnClearShopping"
        app:layout_constraintStart_toEndOf="@+id/btnViewSavedShop"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnViewSavedShop"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/moreroundedbutton"
        android:drawableLeft="@drawable/ic_baseline_view_list_24"
        android:drawablePadding="5dp"
        android:fontFamily="casual"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/viewSaved"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="386dp"
        android:layout_height="118dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="#00514949"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/yellow_rounded_container" />

            <EditText
                android:id="@+id/txtShopItem"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/item"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/imageView6"
                app:layout_constraintStart_toStartOf="@+id/imageView6"
                app:layout_constraintTop_toTopOf="@+id/imageView6" />

            <Button
                android:id="@+id/btnAddShopItem"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_button"
                android:drawableLeft="@drawable/ic_baseline_add_24"
                android:drawablePadding="10dp"
                android:fontFamily="casual"
                android:paddingStart="120dp"
                android:text="@string/addItem"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/viewShopList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveShop" />

</androidx.constraintlayout.widget.ConstraintLayout>