<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentTODO">

    <!-- TODO: Update blank fragment layout -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todoList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFilterToDo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSelectDate"
        android:layout_width="300dp"
        android:layout_height="145dp"
        android:layout_marginBottom="36dp"
        android:visibility="invisible"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/green_rounded_container" />

            <TextView
                android:id="@+id/txtDisplayDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="24dp"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/btnSetDate"
                app:layout_constraintTop_toTopOf="@+id/imageView5" />

            <TextView
                android:id="@+id/txtDisplayTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="90dp"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/btnSetTime"
                app:layout_constraintTop_toTopOf="@+id/imageView5" />

            <Button
                android:id="@+id/btnSetDate"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="casual"
                android:text="@string/setDate"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/imageView5" />

            <Button
                android:id="@+id/btnSetTime"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="casual"
                android:text="@string/setTime"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/btnSetDate" />

            <ImageButton
                android:id="@+id/btnConfirmDate"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/save"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_check_circle_outline_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:tint="#155068" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="397dp"
        android:layout_height="160dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/darkpink_rounded_container"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="4dp" />

            <EditText
                android:id="@+id/txtTodoTitle"
                android:layout_width="361dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/todoItem"
                android:inputType="textShortMessage"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/togReminder"
                android:layout_width="134dp"
                android:layout_height="48dp"
                android:text="@string/alertYN"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/drpRepeat"
                app:layout_constraintTop_toBottomOf="@+id/txtTodoTitle" />

            <ImageButton
                android:id="@+id/btnSelectDateTime"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:background="#00FFFFFF"
                android:src="@drawable/ic_baseline_watch_later_24"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toEndOf="@+id/togReminder"
                app:layout_constraintTop_toBottomOf="@+id/txtTodoTitle"
                app:tint="#000000" />

            <Spinner
                android:id="@+id/drpRepeat"
                style="@style/customTextView"
                android:layout_width="144dp"
                android:layout_height="48dp"
                android:layout_marginTop="58dp"
                android:entries="@array/repeat_array"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="14dp"
                android:text="@string/repeat"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTodoTitle" />

            <Button
                android:id="@+id/btnSaveToDo"
                android:layout_width="347dp"
                android:layout_height="48dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/rounded_button"
                android:drawableStart="@drawable/ic_baseline_save_24"
                android:drawablePadding="10dp"
                android:fontFamily="casual"
                android:paddingStart="100dp"
                android:text="@string/saveTODO"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTodoTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnFilterToDo"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/moreroundedbutton"
        android:drawableStart="@drawable/ic_baseline_filter_alt_24"
        android:drawablePadding="5dp"
        android:fontFamily="casual"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/filterTODO"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>